tests/codegen/fail/object/argument_non_input_type.stderr
error[E0277]: the trait bound `ObjA: IsInputType<__S>` is not satisfied
  --> fail/object/argument_non_input_type.rs:12:23
   |
12 |     fn id(&self, obj: ObjA) -> &str {
   |                       ^^^^ unsatisfied trait bound
   |
help: the trait `IsInputType<__S>` is not implemented for `ObjA`
  --> fail/object/argument_non_input_type.rs:4:1
   |
 4 | struct ObjA {
   | ^^^^^^^^^^^
   = help: the following other types implement trait `IsInputType<S>`:
             ArcStr
             ID
             bool
             compact_str::CompactString
             f64
             i32
             juniper::TypeKind
             juniper::schema::model::DirectiveLocation
             std::string::String

error[E0277]: the trait bound `ObjA: FromInputValue<__S>` is not satisfied
  --> fail/object/argument_non_input_type.rs:12:23
   |
10 | #[graphql_object]
   | ----------------- required by a bound introduced by this call
11 | impl ObjB {
12 |     fn id(&self, obj: ObjA) -> &str {
   |                       ^^^^ unsatisfied trait bound
   |
help: the trait `FromInputValue<__S>` is not implemented for `ObjA`
  --> fail/object/argument_non_input_type.rs:4:1
   |
 4 | struct ObjA {
   | ^^^^^^^^^^^
   = help: the following other types implement trait `FromInputValue<S>`:
             ArcStr
             ID
             bool
             compact_str::CompactString
             f64
             i32
             juniper::TypeKind
             juniper::schema::model::DirectiveLocation
             std::string::String
note: required by a bound in `Registry::<S>::arg`
  --> $WORKSPACE/juniper/src/executor/mod.rs
   |
   |     pub fn arg<T>(&mut self, name: impl Into<ArcStr>, info: &T::TypeInfo) -> Argument<S>
   |            --- required by a bound in this associated function
   |     where
   |         T: GraphQLType<S> + FromInputValue<S>,
   |                             ^^^^^^^^^^^^^^^^^ required by this bound in `Registry::<S>::arg`

error[E0277]: the trait bound `ObjA: FromInputValue<__S>` is not satisfied
  --> fail/object/argument_non_input_type.rs:10:1
   |
10 | #[graphql_object]
   | ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromInputValue<__S>` is not implemented for `ObjA`
  --> fail/object/argument_non_input_type.rs:4:1
   |
 4 | struct ObjA {
   | ^^^^^^^^^^^
   = help: the following other types implement trait `FromInputValue<S>`:
             ArcStr
             ID
             bool
             compact_str::CompactString
             f64
             i32
             juniper::TypeKind
             juniper::schema::model::DirectiveLocation
             std::string::String
   = note: this error originates in the attribute macro `graphql_object` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjA: FromInputValue<__S>` is not satisfied
  --> fail/object/argument_non_input_type.rs:12:23
   |
12 |     fn id(&self, obj: ObjA) -> &str {
   |                       ^^^^ unsatisfied trait bound
   |
help: the trait `FromInputValue<__S>` is not implemented for `ObjA`
  --> fail/object/argument_non_input_type.rs:4:1
   |
 4 | struct ObjA {
   | ^^^^^^^^^^^
   = help: the following other types implement trait `FromInputValue<S>`:
             ArcStr
             ID
             bool
             compact_str::CompactString
             f64
             i32
             juniper::TypeKind
             juniper::schema::model::DirectiveLocation
             std::string::String

warning: unused variable: `obj`
  --> fail/object/argument_non_input_type.rs:12:18
   |
12 |     fn id(&self, obj: ObjA) -> &str {
   |                  ^^^ help: if this is intentional, prefix it with an underscore: `_obj`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
